--- a/html/basic.html
+++ b/html/basic.html
@@ -6,12 +6,17 @@
     <title>my</title>
 </head>
 <body>
-    <h1>my name is kavyan</h1>
-    <h2>my name is kavyan</h2>
-    <h3>my name is kavyan</h3>
-    <h4>my name is kavyan</h4>
-    <h5>my name is kavyan</h5>
-    <h6>my name is kavyan</h6>
+    
+    <center>
+
+        <h1>my name is kavyan</h1>
+        <h2>my name is kavyan</h2>
+        <h3>my name is kavyan</h3>
+        <h4>my name is kavyan</h4>
+        <h5>my name is kavyan</h5>
+        <h6>my name is kavyan</h6>
+        
+    </center>
 
     <!-- paragraph tag -->
 
